Overflowing body finally mostly fixed

--- a/src/Contactpage.css
+++ b/src/Contactpage.css
@@ -68,8 +68,10 @@ input{
 .socials{
     background-color: rgba(0, 0, 0, 0.15);
     width: 100%;
-    bottom: 0;
-    position: fixed;
+
+    /*position: fixed;*/
+
+    margin-top: 10em;
 
     display: flex;
     flex-direction: column;
