--- a/src/Frontpage.css
+++ b/src/Frontpage.css
@@ -1,5 +1,8 @@
 /*Inhoud*/
 
+body{
+/*    Can be found in Header.css*/
+}
 
 .frontPage{
     height: auto;
