--- a/src/partials/Header.css
+++ b/src/partials/Header.css
@@ -5,13 +5,15 @@
 @media(min-height: 500px) {
     body {
         background: linear-gradient(to bottom right, #506d96 0%, #8a4571 100%);
-        height: 120vh;
+        height: fit-content;
+        overflow: hidden;
     }
 }
 @media (max-height: 1902px){
     body {
         background: linear-gradient(to bottom right, #506d96 0%, #8a4571 100%);
-        height: 160vh;
+        height: fit-content;
+        overflow: hidden;
     }
 }
 @media(max-width: 997px){
